--- a/runup_app/templates/likes.html
+++ b/runup_app/templates/likes.html
@@ -9,4 +9,17 @@
 {% block content %}
     내가 좋아요 한 상품<br><br>
     {{check}}
+    {% for prod in contents %}
+      <div class="box">
+        <div class="img_box">
+          <a onclick="animation('{% url 'product' prod.id %}')">
+            <img src="{{ prod.Img_url }}" alt="image" class="image" />
+          </a>
+        </div>
+        <div class="info">
+          <b>{{ prod.Brand.Name_kr }}</b>
+          <div class="price">{% load humanize %} {{prod.Origin_price|intcomma}}원</div>
+        </div>
+      </div>
+    {% endfor %}
 {% endblock %}
