--- a/runup_app/templates/ctg_content.html
+++ b/runup_app/templates/ctg_content.html
@@ -1,17 +1,27 @@
 {% extends 'layout.html'%} {% load static %} {% block style%}
-<link rel="stylesheet" type="text/css" href="{% static 'recommendapp/index.css' %}" />
-<link rel="stylesheet" type="text/css" media="(max-width: 480px)" href="{% static 'recommendapp/mobile_index.css' %}" />
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{% static 'recommendapp/index.css' %}"
+/>
+<link
+  rel="stylesheet"
+  type="text/css"
+  media="(max-width: 480px)"
+  href="{% static 'recommendapp/mobile_index.css' %}"
+/>
 <script src="{% static 'js/categoryPage.js' %}" defer></script>
 {% endblock %} {% block content %}
 <!--********************************* 카테고리 헤더 *********************************-->
-<section class="category-main-section">
+<!-- <section class="category-main-section">
   <div class="category-main-title">
     <h1>{{ s_ctg.Name_kr }}</h1>
     <i class="fas fa-times category-cancel-icon"></i>
   </div>
-</section>
+</section> -->
 
 <div class="category-infinite">
+  <h1 class="category-infinite-title">{{ s_ctg.Name_kr }}</h1>
   <section class="category-sub-section">
     <div class="category-sub">
       <div class="category-sub-filter">
@@ -64,14 +74,20 @@
         </div>
         <div class="info">
           <b>{{ prod.Brand.Name_kr }}</b>
-          <div class="price">{% load humanize %} {{prod.Origin_price|intcomma}}원</div>
+          <div class="price">
+            {% load humanize %} {{prod.Origin_price|intcomma}}원
+          </div>
         </div>
       </div>
     </div>
     {% endfor %}
   </div>
   {% if contents.has_next %}
-  <a class="infinite-more-link" href="?page={{ contents.next_page_number }}&s_ctg={{s_ctg.id}}">More</a>
+  <a
+    class="infinite-more-link"
+    href="?page={{ contents.next_page_number }}&s_ctg={{s_ctg.id}}"
+    >More</a
+  >
   {% endif %}
 </div>
 
@@ -85,7 +101,11 @@
     element: $(".infinite-container")[0],
   });
 </script>
-{% comment %} <input id="page" type="hidden" value="2" /> <button id="callmorepost" type="button" class="btn btn-primary btn-block">More Post</button> {% endcomment %}
+{% comment %} <input id="page" type="hidden" value="2" />
+<button id="callmorepost" type="button" class="btn btn-primary btn-block">
+  More Post
+</button>
+{% endcomment %}
 
 <script type="text/javascript">
   function animation(targetUrl) {
@@ -94,12 +114,15 @@
     var maskWidth = $(document).width();
     var height = $(document).scrollTop();
 
-    var mask = "<div id='mask' style='position:absolute; z-index:9000; background-color:#000000; display:none; left:0; top:0;'></div>";
+    var mask =
+      "<div id='mask' style='position:absolute; z-index:9000; background-color:#000000; display:none; left:0; top:0;'></div>";
     var loadingImg = "";
     var delayTimeMillis = 1200;
 
-    loadingImg += "<div id='loadingImg' style='position:absolute; left:10%; display:none; z-index:10000;'>";
-    loadingImg += " <img src='https://mir-s3-cdn-cf.behance.net/project_modules/disp/35771931234507.564a1d2403b3a.gif'/>";
+    loadingImg +=
+      "<div id='loadingImg' style='position:absolute; left:10%; display:none; z-index:10000;'>";
+    loadingImg +=
+      " <img src='https://mir-s3-cdn-cf.behance.net/project_modules/disp/35771931234507.564a1d2403b3a.gif'/>";
     loadingImg += "</div>";
 
     $("form").append(mask).append(loadingImg);
