--- a/runup_app/templates/layout.html
+++ b/runup_app/templates/layout.html
@@ -96,7 +96,7 @@
           <dt class="sr-only">회원가입 & 로그인</dt>
           <div class="signUp-signIn">
             <dd class="sign-up">
-              <a href="{% url 'signup'%}">아테나 회원가입</a>
+              <a href="{% url 'signup'%}">RUNUP 맴버 가입</a>
             </dd>
             <dd class="sign-in">
               <a href="{% url 'login'%}">로그인</a>
