heart breaker 구현 완료

--- a/accounts/templates/layout.html
+++ b/accounts/templates/layout.html
@@ -94,6 +94,10 @@
           </div>
         </header>
         <dl class="myPage-menu">
+          <dt class="sr-only">로그아웃</dt>
+          <dd class="logout">
+            <a href="{% url 'logout' %}">로그아웃</a>
+          </dd>
           <dt class="sr-only">회원가입 & 로그인</dt>
           <div class="signUp-signIn">
             <dd class="sign-up">
