--- a/runup_app/templates/main_content.html
+++ b/runup_app/templates/main_content.html
@@ -1,15 +1,7 @@
 {% extends 'layout.html'%} {% load static %} {% block style%}
-<link
-  rel="stylesheet"
-  type="text/css"
-  href="{% static 'recommendapp/index.css' %}"
-/>
-<link
-  rel="stylesheet"
-  type="text/css"
-  media="(max-width: 480px)"
-  href="{% static 'recommendapp/mobile_index.css' %}"
-/>
+<link rel="stylesheet" type="text/css" href="{% static 'recommendapp/index.css' %}" />
+<link rel="stylesheet" type="text/css" media="(max-width: 480px)" href="{% static 'recommendapp/mobile_index.css' %}" />
+<script src="{% static 'js/main_content.js' %}" defer></script>
 {% endblock %} {% block content %} {% comment %} {{category}} {% endcomment %}
 <div class="header-menu">
   <a href="#">
@@ -37,21 +29,17 @@
           <img src="{{ prod.Img_url }}" alt="image" class="image" />
         </a>
       </div>
-      <div class="info">
-        <b>{{ prod.Brand.Name_en }}</b>
-        <div class="price">
-          {% load humanize %} {{prod.Origin_price|intcomma}}원
+      <div class="product-container">
+        <div class="info">
+          <b>{{ prod.Brand.Name_en }}</b>
+          <div class="price">{% load humanize %} {{prod.Origin_price|intcomma}}원</div>
         </div>
-      </div>
-      {% comment %} 임의로 찜하기 버튼을 추가했습니다. 추후 수정요망 {%
-      endcomment %} {% comment %} ajax로 제품의 아이디값을 보내서 컨트롤러단으로
-      보내게 한다 {% endcomment %} {% comment %} ajax: 제품을 찜했는지 안했는지
-      '상태'만 전달을 주고받고하여 쿠키로 저장하게 한다 {% endcomment %}
-
-      <div>
-        <a onclick="like_ajax('{% url 'like' prod.id %}', {{ prod.id }} )"
-          >찜</a
-        >
+        <!-- 임의로 찜하기 버튼을 추가했습니다. 추후 수정요망 -->
+        <!-- ajax로 제품의 아이디값을 보내서 컨트롤러단으로 보내게 한다 -->
+        <!-- ajax: 제품을 찜했는지 안했는지 '상태'만 전달을 주고받고하여 쿠키로 저장하게 한다 -->
+        <a class="product-image-box" onclick="like_ajax('{% url 'like' prod.id %}', {{ prod.id }} )">
+          <button class="heart-button" type="button"></button>
+        </a>
       </div>
     </div>
   </div>
@@ -107,10 +95,10 @@
     function like_ajax(targetUrl,prod_id) {
       {% if user.is_authenticated %}
         // 로그인을 했을경우 view의 like로 가서 like DB에 데이터를 추가해준다
-        alert("로그인 됨")
+        // alert("로그인 됨")
         location.href = targetUrl;
       {% else %}
-        alert("로그인 안됨")
+        // alert("로그인 안됨")
         // 로그인이 안됐을 경우 쿠키로 저장주는 함수로 보낸다.
         addCookie(prod_id)
       {% endif %}
