--- a/runup_app/static/recommendapp/mobile_index.css
+++ b/runup_app/static/recommendapp/mobile_index.css
@@ -24,40 +24,14 @@ input {
   display: block;
 }
 
-/* category main Section */
-.category-main-section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  padding: 10px 18px;
-  height: 65px;
-  background-color: #000;
-  color: #fff;
-  /* position */
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 2;
-  /* box-shadow */
-  -webkit-box-shadow: 0px 2px 4px 0px rgba(50, 50, 50, 0.2);
-  -moz-box-shadow: 0px 2px 4px 0px rgba(50, 50, 50, 0.2);
-  box-shadow: 0px 2px 4px 0px rgba(50, 50, 50, 0.2);
-}
-
-.category-main-title {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 17px;
-  width: 100%;
-}
-
-.category-main-title h1 {
-  font-weight: 400;
-}
-
 /* category sub section */
+
+.category-sub {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
 .category-sub-section {
   margin-top: 10px;
 }
@@ -79,12 +53,6 @@ input {
   width: 100%;
   /* padding-bottom: 10px; */
   background-color: #fff;
-}
-
-.category-sub {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
 }
 
 .category-sub-filter,
@@ -135,6 +103,13 @@ input {
   overflow: auto;
 }
 
+.category-infinite-title {
+  margin-top: 10px;
+  margin-left: 20px;
+  font-weight: 400;
+  font-size: 13px;
+}
+
 .header {
   box-shadow: none;
 }
@@ -169,15 +144,14 @@ input {
 }
 
 .img_box {
-  width: 100%;
-  margin: 2%;
-
-  height: 150px;
-
-  background-color: white;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: white;
+  width: 100%;
+  margin: 2% 2% 10px 2%;
+  height: 150px;
+  /* margin-bottom: 10px; */
 }
 
 .image {
