--- a/runup_app/static/recommendapp/mobile_layout.css
+++ b/runup_app/static/recommendapp/mobile_layout.css
@@ -142,9 +142,24 @@ input:focus {
   display: none;
 }
 
-.likes-menu,
-.myPage-menu,
-.category-menu {
+.myPage-menu {
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  padding: 20px 0;
+  width: 100%;
+  min-height: 100vh;
+  background-color: #fff;
+  /* position */
+  position: absolute;
+  top: 0;
+  right: 0;
+  overflow: auto;
+  margin-top: 63px;
+}
+
+/* .myPage-menu, */
+.likes-menu {
   display: flex;
   flex-direction: column;
   font-size: 20px;
@@ -152,6 +167,22 @@ input:focus {
   width: 100%;
   min-height: 100vh;
   background-color: #eff2f7;
+  /* position */
+  position: absolute;
+  top: 0;
+  right: 0;
+  overflow: auto;
+  margin-top: 63px;
+}
+
+.category-menu {
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  /* padding: 20px 0; */
+  width: 100%;
+  min-height: 100vh;
+  background-color: #fff;
   /* position */
   position: absolute;
   top: 0;
@@ -171,23 +202,49 @@ input:focus {
 .likes-menu dd,
 .myPage-menu dt,
 .myPage-menu dd {
-  font-size: 15px;
+  font-size: 13px;
+  border-bottom: 1px solid #e5e5e5;
+  padding: 10px 13px;
 }
 
-.category-menu dt,
-.category-menu dd {
-  /* margin-bottom: 5px; */
-  font-size: 15px;
-  /* padding: 11px; */
-  margin-bottom: 1px;
+.myPage-user-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.myPage-user-name {
+  font-size: 13px;
+  padding: 10px 13px;
+}
+
+#myPage-user-info {
+  border: none;
+  background-color: #000;
+  padding: 3px 10px;
+  margin-right: 13px;
+  border-radius: 3px;
+}
+#myPage-user-info a {
+  color: #fff;
+}
+
+.category-menu dt {
+  font-size: 12px;
   background-color: #fff;
+}
+
+.category-menu dd {
+  font-size: 10px;
+  background-color: #fff;
+  color: #666;
 }
 
 .category-menu-a {
   width: 49.8%;
-  padding: 11px;
+  padding: 8px 15px;
   background-color: #fff;
-  margin-bottom: 1px;
+  border-bottom: 1px solid #e5e5e5;
 }
 
 /* category dropdown menu */
@@ -196,8 +253,10 @@ input:focus {
   justify-content: space-between;
   background-color: #fff;
   align-items: center;
-  padding: 11px;
-  margin-bottom: 1px;
+  padding: 11px 15px;
+  /* margin-bottom: 1px; */
+  font-size: 10px;
+  border-bottom: 1px solid #e5e5e5;
 }
 
 .fa-chevron-down {
@@ -213,6 +272,10 @@ input:focus {
   /* justify-content: space-between; */
 }
 
+.category-menu-dd-section-active {
+  display: flex;
+}
+
 .category-menu-dd-section {
   flex-wrap: wrap;
 }
@@ -223,16 +286,20 @@ input:focus {
 
 /* signup signin */
 .signUp-signIn {
+  display: flex;
+  flex-direction: column;
+  /* align-items: flex-end; */
   margin-bottom: 5px;
+  width: 100%;
 }
 
 .sign-up {
   display: inline-block;
 }
 
-.sign-up::after {
+/* .sign-up::after {
   content: "/";
-}
+} */
 
 .sign-in {
   display: inline-block;
