--- a/runup_app/templates/brandrank.html
+++ b/runup_app/templates/brandrank.html
@@ -12,7 +12,7 @@
 
 {% for i in b_v %}
     {% comment %} <ol> {% endcomment %}
-        브랜드: <li>{{i.Brand__Name_en}}</li>
+        브랜드: <li>{{i.brand__name_en}}</li>
         조회수: <li>{{i.b_v}}</li>
     {% comment %} </ol>     {% endcomment %}
 {% endfor %}
