--- a/runup_app/templates/sub_content.html
+++ b/runup_app/templates/sub_content.html
@@ -10,8 +10,8 @@
       <img src="{{main.Img_url}}" alt="image" class="target_img" />
     </a>
     <div class="info">
-      <b>{{main.Brand.Name_kr}}</b>
-      <div class="price">{% load humanize %} {{main.Origin_price|intcomma}}원</div>
+      <b>{{main.brand.name_kr}}</b>
+      <div class="price">{% load humanize %} {{main.origin_price|intcomma}}원</div>
     </div>
   </div>
   <div class="sim_container">
@@ -61,13 +61,13 @@
       {% for content in contents %}
       <div class="box">
         <div class="img_box">
-          <a href="{{content.Sim_prod.Url}}">
-            <img class="image" src="{{content.Sim_prod.Img_url}}" alt="image" class="image" />
+          <a href="{{content.sim_prod.url}}">
+            <img class="image" src="{{content.sim_prod.img_url}}" alt="image" class="image" />
           </a>
         </div>
         <div class="info">
-          <b>{{content.Sim_prod.Brand.Name_kr}}</b>
-          <div class="price">{% load humanize %} {{content.Sim_prod.Origin_price|intcomma}}원</div>
+          <b>{{content.sim_prod.brand.Name_kr}}</b>
+          <div class="price">{% load humanize %} {{content.sim_prod.origin_price|intcomma}}원</div>
         </div>
       </div>
       {% endfor %}
