--- a/runup_app/templates/ctg_content.html
+++ b/runup_app/templates/ctg_content.html
@@ -69,7 +69,7 @@
       <div class="box">
         <div class="img_box">
           <a onclick="animation('{% url 'product' prod.id %}')">
-            <img src="{{ prod.Img_url }}" alt="image" class="image" />
+            <img src="{{ prod.img_url }}" alt="image" class="image" />
           </a>
         </div>
         <div class="info">
