--- a/runup_app/templates/sub_content.html
+++ b/runup_app/templates/sub_content.html
@@ -6,8 +6,8 @@
 
 <div class="container">
   <div class="target_container">
-    <a href="{{main.Url}}" class="target_box">
-      <img src="{{main.Img_url}}" alt="image" class="target_img" />
+    <a href="{{main.url}}" class="target_box">
+      <img src="{{main.img_url}}" alt="image" class="target_img" />
     </a>
     <div class="info">
       <b>{{main.brand.name_kr}}</b>
