fixed sign_up gender erro

--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -17,11 +17,11 @@
       <span class="gender-span">성별을 체크해주세요 </span>
       <div class="gender-box">
         <div class="gender-box-item">
-          <input class="gender-input" type="radio" id="w" name="gender" value="w" checked />
+          <input class="gender-input" type="radio" id="w" name="gender" value="1" checked />
           <label for="w">WOMEN</label>
         </div>
         <div class="gender-box-item">
-          <input class="gender-input" type="radio" id="m" name="gender" value="m" />
+          <input class="gender-input" type="radio" id="m" name="gender" value="2" />
           <label for="m">MEN</label>
         </div>
       </div>
